--- a/packages/eslint-config/package.json
+++ b/packages/eslint-config/package.json
@@ -1,5 +1,15 @@
 {
   "name": "@stanlemon/eslint-config",
+  "version": "0.1.0",
+  "description": "My typical eslint setup, but without all the copy and paste.",
+  "keywords": [
+    "eslint"
+  ],
+  "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
+  "license": "MIT",
+  "engines": {
+    "node": ">=17.0"
+  },
   "type": "commonjs",
   "scripts": {
     "lint": "eslint --ext js,jsx,ts,tsx ./",
