--- a/packages/webdev/package.json
+++ b/packages/webdev/package.json
@@ -28,12 +28,13 @@
     "@babel/preset-react": "^7.16.5",
     "@babel/preset-typescript": "^7.16.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
-    "@stanlemon/webdev": "*",
+    "@stanlemon/eslint-config": "*",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.0.3",
     "@types/node": "^16.11.13",
     "@types/react": "^17.0.37",
+    "@types/webpack": "^5.28.0",
     "@types/webpack-env": "^1.16.3",
     "babel-jest": "^27.4.5",
     "babel-loader": "^8.2.3",
