--- a/packages/webdev/package.json
+++ b/packages/webdev/package.json
@@ -29,8 +29,10 @@
     "@babel/preset-typescript": "^7.16.5",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.3",
     "@stanlemon/eslint-config": "*",
+    "@testing-library/dom": "^8.11.1",
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
+    "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.0.3",
     "@types/node": "^17.0.0",
     "@types/react": "^17.0.37",
