--- a/packages/webdev/package.json
+++ b/packages/webdev/package.json
@@ -19,8 +19,6 @@
     "lint:format": "eslint --fix --ext js,jsx,ts,tsx ./"
   },
   "dependencies": {
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
     "@babel/core": "^7.16.5",
     "@babel/preset-env": "^7.16.5",
     "@babel/preset-react": "^7.16.5",
@@ -45,9 +43,12 @@
     "jest": "^27.4.5",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
     "react-refresh": "^0.11.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.5.4",
+    "url-loader": "^4.1.1",
     "webpack": "^5.65.0",
     "webpack-bundle-analyzer": "^4.5.0",
     "webpack-cli": "^4.9.1",
