--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -9,6 +9,7 @@
     "start": "webpack serve",
     "build": "NODE_ENV=production webpack",
     "test": "jest",
+    "test:coverage": "jest --coverage",
     "lint": "eslint --ext js,jsx,ts,tsx ./src/",
     "lint:format": "eslint --fix --ext js,jsx,ts,tsx ./src/"
   },
