--- a/packages/webdev/.babelrc.json
+++ b/packages/webdev/.babelrc.json
@@ -16,6 +16,11 @@
       }
     ],
     "@babel/preset-typescript",
-    "@babel/preset-react"
+    [
+      "@babel/preset-react",
+      {
+        "runtime": "automatic"
+      }
+    ]
   ]
 }
