Add allowDeclareFields for typescript

--- a/packages/webdev/.babelrc.json
+++ b/packages/webdev/.babelrc.json
@@ -19,7 +19,8 @@
     [
       "@babel/preset-react",
       {
-        "runtime": "automatic"
+        "runtime": "automatic",
+        "allowDeclareFields": true
       }
     ]
   ]
