What a goof, I am

--- a/packages/webdev/.babelrc.json
+++ b/packages/webdev/.babelrc.json
@@ -15,12 +15,16 @@
         }
       }
     ],
-    "@babel/preset-typescript",
+    [
+      "@babel/preset-typescript",
+      {
+        "allowDeclareFields": true
+      }
+    ],
     [
       "@babel/preset-react",
       {
-        "runtime": "automatic",
-        "allowDeclareFields": true
+        "runtime": "automatic"
       }
     ]
   ]
