--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/cli",
-  "version": "0.1.8",
+  "version": "0.1.9",
   "description": "A command tool to make all of my things easier.",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "lemon": "./index.js"
   },
   "dependencies": {
-    "@stanlemon/app-template": "^0.1.1",
+    "@stanlemon/app-template": "*",
     "get-installed-path": "^4.0.8",
     "yargs": "^17.3.1"
   }
