--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/server",
-  "version": "0.1.0",
+  "version": "0.1.2",
   "description": "A basic express web server setup.",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
@@ -18,15 +18,15 @@
   "dependencies": {
     "compression": "^1.7.4",
     "dotenv": "16.0.0",
-    "express": "^4.17.1",
-    "express-rate-limit": "^6.2.0",
+    "express": "^4.17.2",
+    "express-rate-limit": "^6.2.1",
     "helmet": "^5.0.2",
-    "http-proxy-middleware": "^2.0.1",
+    "http-proxy-middleware": "^2.0.3",
     "lodash-es": "^4.17.21",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
-    "@stanlemon/eslint-config": "*",
+    "@stanlemon/eslint-config": "0.1.4",
     "nodemon": "^2.0.15"
   }
 }
