Improvements to responses, more demoable

--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "husky": "^7.0.4"
   },
   "scripts": {
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "lint": "npm run lint --workspaces --if-present",
+    "test": "npm run test --workspaces --if-present"
   }
 }
