--- a/packages/server-with-auth/package.json
+++ b/packages/server-with-auth/package.json
@@ -11,7 +11,7 @@
   "main": "./src/index.js",
   "exports": "./src/index.js",
   "scripts": {
-    "start": "NODE_ENV=development nodemon ./app.js",
+    "start": "NODE_ENV=development nodemon --ignore db.json ./app.js",
     "lint": "eslint --ext js,jsx,ts,tsx ./",
     "lint:format": "eslint --fix --ext js,jsx,ts,tsx ./",
     "test": "NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles",
@@ -23,12 +23,13 @@
     "date-fns": "^2.28.0",
     "jsonwebtoken": "^8.5.1",
     "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0",
-    "passport-local": "^1.0.0"
+    "passport-jwt": "^4.0.0"
   },
   "devDependencies": {
     "@stanlemon/eslint-config": "*",
+    "lowdb": "^3.0.0",
     "nodemon": "^2.0.15",
-    "supertest": "^6.2.2"
+    "supertest": "^6.2.2",
+    "uuid": "^8.3.2"
   }
 }
