--- a/packages/server-with-auth/package.json
+++ b/packages/server-with-auth/package.json
@@ -20,16 +20,16 @@
   "dependencies": {
     "@stanlemon/server": "*",
     "bcryptjs": "^2.4.3",
-    "date-fns": "^2.28.0",
     "jsonwebtoken": "^8.5.1",
+    "lowdb": "^3.0.0",
     "passport": "^0.5.2",
-    "passport-jwt": "^4.0.0"
+    "passport-jwt": "^4.0.0",
+    "shortid": "^2.2.8",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "@stanlemon/eslint-config": "*",
-    "lowdb": "^3.0.0",
     "nodemon": "^2.0.15",
-    "supertest": "^6.2.2",
-    "uuid": "^8.3.2"
+    "supertest": "^6.2.2"
   }
 }
