Remove dependabot, switch to renovate for automerge

--- a/renovate.json
+++ b/renovate.json
@@ -13,6 +13,15 @@
         "node"
       ],
       "enabled": false
+    },
+    {
+      "matchUpdateTypes": [
+        "minor",
+        "patch",
+        "pin",
+        "digest"
+      ],
+      "automerge": true
     }
   ]
 }
