--- a/renovate.json
+++ b/renovate.json
@@ -7,7 +7,8 @@
   "bumpVersion": "patch",
   "rangeStrategy": "bump",
   "schedule": [
-    "before 8am every weekday"
+    "after 2am and before 6am on Thursday",
+    "after 10am and before 4pm on Saturday"
   ],
   "packageRules": [
     {
@@ -15,6 +16,16 @@
         "node"
       ],
       "enabled": false
+    },
+    {
+      "matchDatasources": [
+        "npm"
+      ],
+      "matchUpdateTypes": [
+        "major"
+      ],
+      "automerge": true,
+      "automergeType": "pr"
     },
     {
       "matchDatasources": [
