Add script for streamlined publishing

--- a/package.json
+++ b/package.json
@@ -6,12 +6,14 @@
     "packages/*",
     "apps/*"
   ],
+  "type": "module",
   "devDependencies": {
     "husky": "^7.0.4"
   },
   "scripts": {
     "prepare": "husky install",
     "lint": "npm run lint --workspaces --if-present",
-    "test": "npm run test --workspaces --if-present"
+    "test": "npm run test --workspaces --if-present",
+    "publish": "node publish.js"
   }
 }
