--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -1,6 +1,8 @@
-name: Test
-on: [push]
-
+name: Publish to npm
+on:
+  push:
+    branches:
+      - main
 jobs:
   test:
     runs-on: ubuntu-latest
@@ -35,3 +37,6 @@ jobs:
 
       - name: Build
         run: npm run build
+
+      - name: Publish to npm
+        run: npm run publish
