--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -4,7 +4,7 @@ on:
     branches:
       - main
 jobs:
-  publish:
+  publish-to-npm:
     runs-on: ubuntu-latest
     steps:
       - name: Checkout 🛎️
