--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -26,9 +26,6 @@ jobs:
         with:
           node-version: "16"
 
-      - env:
-          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
-
       - name: Install dependencies
         run: npm ci
 
@@ -43,3 +40,5 @@ jobs:
 
       - name: Publish to npm
         run: npm run publish
+        env:
+          NPM_TOKEN: ${{ secrets.NPM_TOKEN }}
