--- a/packages/webdev/package.json
+++ b/packages/webdev/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/webdev",
-  "version": "0.1.21",
+  "version": "0.1.22",
   "description": "My typical web development setup, but without all the copy and paste.",
   "keywords": [
     "webpack",
@@ -15,6 +15,7 @@
   },
   "type": "module",
   "scripts": {
+    "test": "WEBDEV_ENTRY=./test.tsx webpack build",
     "lint": "eslint --ext js,jsx,ts,tsx ./",
     "lint:format": "eslint --fix --ext js,jsx,ts,tsx ./"
   },
@@ -27,7 +28,7 @@
     "@stanlemon/eslint-config": "*",
     "@testing-library/dom": "^8.12.0",
     "@testing-library/jest-dom": "^5.16.3",
-    "@testing-library/react": "^13.0.0",
+    "@testing-library/react": "^12.1.4",
     "@testing-library/user-event": "^13.5.0",
     "@types/jest": "^27.4.1",
     "@types/react": "^17.0.43",
@@ -44,10 +45,10 @@
     "jest": "^27.5.1",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
-    "prettier": "^2.6.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-refresh": "^0.12.0",
+    "prettier": "^2.6.2",
+    "react": "^17.0.2",
+    "react-dom": "^17.0.2",
+    "react-refresh": "^0.11.0",
     "style-loader": "^3.3.1",
     "typescript": "^4.6.3",
     "webpack": "^5.71.0",
