--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "node app.js",
     "build": "npm run webpack:build",
+    "tsc": "tsc",
     "webpack:serve": "webpack serve",
     "webpack:build": "NODE_ENV=production webpack",
     "test": "jest",
