Add peerDeps config for renovate

--- a/renovate.json
+++ b/renovate.json
@@ -18,6 +18,12 @@
       "enabled": false
     },
     {
+      "matchDepTypes": [
+        "peerDependencies"
+      ],
+      "rangeStrategy": "widen"
+    },
+    {
       "matchDatasources": [
         "npm"
       ],
