--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -13,7 +13,9 @@
   "scripts": {
     "start": "NODE_ENV=development nodemon ./app.js",
     "lint": "eslint --ext js,jsx,ts,tsx ./",
-    "lint:format": "eslint --fix --ext js,jsx,ts,tsx ./"
+    "lint:format": "eslint --fix --ext js,jsx,ts,tsx ./",
+    "test": "NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles",
+    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles --watch"
   },
   "dependencies": {
     "compression": "^1.7.4",
