--- a/packages/webdev/package.json
+++ b/packages/webdev/package.json
@@ -43,6 +43,7 @@
     "html-webpack-plugin": "^5.5.0",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^28.0.3",
+    "jest-environment-jsdom": "^28.0.2",
     "less": "^4.1.2",
     "less-loader": "^10.2.0",
     "prettier": "^2.6.2",
