--- a/.gitignore
+++ b/.gitignore
@@ -11,7 +11,7 @@ node_modules/
 **/dist/
 
 ## Test coverage
-**/.coverage/
+**/coverage/
 
 packages/server-with-auth/db.json
 apps/template/db.json
