--- a/packages/webdev/package.json
+++ b/packages/webdev/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/webdev",
-  "version": "0.1.38",
+  "version": "0.1.39",
   "description": "My typical web development setup, but without all the copy and paste.",
   "keywords": [
     "webpack",
@@ -24,6 +24,7 @@
     "@babel/preset-env": "^7.17.10",
     "@babel/preset-react": "^7.16.7",
     "@babel/preset-typescript": "^7.16.7",
+    "@peculiar/webcrypto": "^1.3.3",
     "@pmmmwh/react-refresh-webpack-plugin": "^0.5.5",
     "@stanlemon/eslint-config": "*",
     "@testing-library/jest-dom": "^5.16.4",
