Lots of test improvements

--- a/.gitignore
+++ b/.gitignore
@@ -13,5 +13,6 @@ node_modules/
 ## Test coverage
 **/coverage/
 
-packages/server-with-auth/db.json
-apps/template/db.json
+## Application files
+**/db.json
+**/.env
