--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/app-template",
-  "version": "0.2.10",
+  "version": "0.2.11",
   "description": "A template for creating apps using the webdev package.",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
@@ -27,6 +27,7 @@
     "@testing-library/react": "^13.1.1",
     "@testing-library/user-event": "^14.1.1",
     "@types/react": "^18.0.8",
-    "@types/react-dom": "^18.0.3"
+    "@types/react-dom": "^18.0.3",
+    "supertest": "^6.2.3"
   }
 }
