--- a/packages/server-with-auth/package.json
+++ b/packages/server-with-auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/server-with-auth",
-  "version": "0.1.5",
+  "version": "0.1.6",
   "description": "A basic express web server setup with authentication baked in.",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
@@ -14,12 +14,13 @@
     "start": "NODE_ENV=development nodemon --ignore db.json ./app.js",
     "lint": "eslint --ext js,jsx,ts,tsx ./",
     "lint:format": "eslint --fix --ext js,jsx,ts,tsx ./",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles",
-    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles --coverage",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles --watch"
+    "test": "jest --detectOpenHandles",
+    "test:coverage": "jest --detectOpenHandles --coverage",
+    "test:watch": "jest --detectOpenHandles --watch"
   },
   "dependencies": {
     "@stanlemon/server": "*",
+    "@stanlemon/webdev": "*",
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^3.0.0",
