--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/server",
-  "version": "0.2.3",
+  "version": "0.2.4",
   "description": "A basic express web server setup.",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
@@ -14,11 +14,12 @@
     "start": "NODE_ENV=development nodemon ./app.js",
     "lint": "eslint --ext js,jsx,ts,tsx ./",
     "lint:format": "eslint --fix --ext js,jsx,ts,tsx ./",
-    "test": "NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles",
-    "test:coverage": "NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles --coverage",
-    "test:watch": "NODE_OPTIONS=--experimental-vm-modules jest --detectOpenHandles --watch"
+    "test": "jest --detectOpenHandles",
+    "test:coverage": "jest --detectOpenHandles --coverage",
+    "test:watch": "jest --detectOpenHandles --watch"
   },
   "dependencies": {
+    "@stanlemon/webdev": "*",
     "compression": "^1.7.4",
     "dotenv": "16.0.0",
     "express": "^4.18.1",
@@ -26,11 +27,12 @@
     "helmet": "^5.0.2",
     "http-proxy-middleware": "^2.0.6",
     "joi": "^17.6.0",
-    "lodash-es": "^4.17.21",
+    "lodash": "^4.17.21",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@stanlemon/eslint-config": "*",
+    "@types/lodash": "^4.14.182",
     "nodemon": "^2.0.16"
   }
 }
