--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/server",
-  "version": "0.2.5",
+  "version": "0.2.6",
   "description": "A basic express web server setup.",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
@@ -28,6 +28,7 @@
     "http-proxy-middleware": "^2.0.6",
     "joi": "^17.6.0",
     "lodash": "^4.17.21",
+    "lodash-es": "^4.17.21",
     "morgan": "^1.10.0"
   },
   "devDependencies": {
