Attempt to disable types/node for packages that use pouchdb

--- a/renovate.json
+++ b/renovate.json
@@ -18,6 +18,16 @@
       "enabled": false
     },
     {
+      "paths": [
+        "packages/react-pouchdb",
+        "packages/react-couchdb-authentication"
+      ],
+      "packageNames": [
+        "@types/node"
+      ],
+      "enabled": false
+    },
+    {
       "matchDepTypes": [
         "peerDependencies"
       ],
