--- a/packages/react-couchdb-authentication/package.json
+++ b/packages/react-couchdb-authentication/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/react-couchdb-authentication",
-  "version": "0.8.8",
+  "version": "0.8.9",
   "description": "React component for authenticating against a CouchDB user db and syncing it locally with PouchDB.",
   "keywords": [
     "react",
@@ -23,7 +23,7 @@
     "test:coverage": "jest --coverage",
     "lint": "eslint --ext js,jsx,ts,tsx ./src/ ./example/",
     "lint:format": "eslint --fix --ext js,jsx,ts,tsx ./src/ ./example/",
-    "build": "tsc",
+    "build": "rimraf ./dist/; tsc; NODE_ENV=production babel --config-file ./.babelrc.json --plugins babel-plugin-add-import-extension --extensions=\".ts,.tsx\" ./src/ --out-dir ./dist/ --ignore  \"src /**/*.test.*\" --source-maps",
     "example": "WEBDEV_ENTRY=./example/Example.tsx webpack serve"
   },
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
@@ -51,7 +51,8 @@
     "pouchdb": "^7.3.0",
     "pouchdb-adapter-memory": "^7.3.0",
     "react": "^18.1.0",
-    "react-dom": "^18.1.0"
+    "react-dom": "^18.1.0",
+    "rimraf": "^3.0.2"
   },
   "dependencies": {
     "async-retry": "^1.3.3",
