--- a/packages/react-pouchdb/tsconfig.json
+++ b/packages/react-pouchdb/tsconfig.json
@@ -2,6 +2,7 @@
   "extends": "@stanlemon/webdev/tsconfig.json",
   "compilerOptions": {
     "noEmit": false,
+    "emitDeclarationOnly": true,
     "outDir": "./dist",
   },
   "include": [
