--- a/packages/webdev/package.json
+++ b/packages/webdev/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/webdev",
-  "version": "0.1.46",
+  "version": "0.1.47",
   "description": "My typical web development setup, but without all the copy and paste.",
   "keywords": [
     "webpack",
@@ -36,6 +36,7 @@
     "@types/webpack-env": "^1.16.4",
     "babel-jest": "^28.1.0",
     "babel-loader": "^8.2.5",
+    "babel-plugin-add-import-extension": "^1.6.0",
     "clean-webpack-plugin": "^4.0.0",
     "css-loader": "^6.7.1",
     "dotenv": "^16.0.0",
