--- a/packages/webdev/tsconfig.json
+++ b/packages/webdev/tsconfig.json
@@ -1,13 +1,11 @@
 {
   "compilerOptions": {
     "noEmit": true,
-    "target": "esnext",
+    "target": "ES2021",
     "lib": [
-      "dom",
-      "dom.iterable",
-      "esnext"
+      "ES2021",
+      "DOM",
     ],
-    "sourceMap": true,
     "declaration": true,
     "declarationMap": true,
     "allowJs": true,
@@ -17,7 +15,7 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
-    "module": "commonjs",
+    "module": "ES6",
     "moduleResolution": "node",
     "resolveJsonModule": true,
     "isolatedModules": true,
