--- a/packages/react-pouchdb/package.json
+++ b/packages/react-pouchdb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/react-pouchdb",
-  "version": "0.4.15",
+  "version": "0.4.16",
   "description": "React components for interacting with PouchDB.",
   "keywords": [
     "react",
@@ -36,7 +36,7 @@
   },
   "devDependencies": {
     "@stanlemon/webdev": "*",
-    "@types/lodash": "^4.14.182",
+    "@types/lodash-es": "^4.17.6",
     "@types/node": "^15.14.9",
     "@types/pouchdb": "^6.4.0",
     "pouchdb": "^7.3.0",
@@ -45,6 +45,6 @@
     "wait-for-expect": "^3.0.2"
   },
   "dependencies": {
-    "lodash": "^4.17.21"
+    "lodash-es": "^4.17.21"
   }
 }
