--- a/packages/react-couchdb-authentication/package.json
+++ b/packages/react-couchdb-authentication/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/react-couchdb-authentication",
-  "version": "0.8.9",
+  "version": "0.8.10",
   "description": "React component for authenticating against a CouchDB user db and syncing it locally with PouchDB.",
   "keywords": [
     "react",
@@ -56,7 +56,6 @@
   },
   "dependencies": {
     "async-retry": "^1.3.3",
-    "buffer": "^6.0.3",
-    "set-interval-async": "^2.0.3"
+    "buffer": "^6.0.3"
   }
 }
