--- a/apps/react-pouchdb-example/package.json
+++ b/apps/react-pouchdb-example/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "example-app",
+  "name": "@stanlemon/react-pouchdb-example",
   "version": "0.1.0",
   "description": "A react app using pouchdb built in typescript",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com",
@@ -22,9 +22,9 @@
     "@fortawesome/fontawesome-svg-core": "^6.1.1",
     "@fortawesome/free-solid-svg-icons": "^6.1.1",
     "@fortawesome/react-fontawesome": "^0.1.18",
-    "@stanlemon/react-couchdb-authentication": "^0.8.10",
-    "@stanlemon/react-pouchdb": "^0.4.16",
-    "@stanlemon/webdev": "^0.1.48",
+    "@stanlemon/react-couchdb-authentication": "*",
+    "@stanlemon/react-pouchdb": "*",
+    "@stanlemon/webdev": "*",
     "bulma": "^0.9.4",
     "date-fns": "^2.28.0",
     "pouchdb": "^7.3.0",
