--- a/packages/server-with-auth/package.json
+++ b/packages/server-with-auth/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/server-with-auth",
-  "version": "0.1.19",
+  "version": "0.1.20",
   "description": "A basic express web server setup with authentication baked in.",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
@@ -24,6 +24,7 @@
     "bcryptjs": "^2.4.3",
     "jsonwebtoken": "^8.5.1",
     "lowdb": "^5.0.5",
+    "lowdb-node": "^3.0.2",
     "passport": "^0.6.0",
     "passport-jwt": "^4.0.0",
     "shortid": "^2.2.16",
