--- a/packages/react-pouchdb/tsconfig.json
+++ b/packages/react-pouchdb/tsconfig.json
@@ -4,6 +4,7 @@
     "noEmit": false,
     "emitDeclarationOnly": true,
     "outDir": "./dist",
+    "skipLibCheck": true // This is due to an issue with the buffer library
   },
   "include": [
     "./src/**/*"
