--- a/packages/webdev/package.json
+++ b/packages/webdev/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/webdev",
-  "version": "0.1.119",
+  "version": "0.1.120",
   "description": "My typical web development setup, but without all the copy and paste.",
   "keywords": [
     "webpack",
@@ -43,6 +43,7 @@
     "html-webpack-plugin": "^5.5.3",
     "identity-obj-proxy": "^3.0.0",
     "jest": "^29.6.4",
+    "jest-dom": "^4.0.0",
     "jest-environment-jsdom": "^29.6.4",
     "less": "^4.2.0",
     "less-loader": "^11.1.3",
