Improve user management capabilities

--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -7,11 +7,12 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
+    "start:dev": "NODE_ENV=development nodemon --ignore ./db.json app.js",
     "build": "npm run webpack:build",
     "tsc": "tsc",
     "webpack:serve": "webpack serve",
     "webpack:build": "NODE_ENV=production webpack",
-    "dev": "concurrently \"npm run webpack:serve\" \"npm run start\"",
+    "dev": "NODE_ENV=development concurrently \"npm run webpack:serve\" \"npm run start:dev\"",
     "test": "jest",
     "test:watch": "jest -w",
     "test:coverage": "jest --coverage",
