--- a/packages/server-with-auth/package.json
+++ b/packages/server-with-auth/package.json
@@ -22,11 +22,13 @@
     "@stanlemon/server": "*",
     "@stanlemon/webdev": "*",
     "bcryptjs": "^2.4.3",
+    "express-session": "^1.17.3",
     "jsonwebtoken": "^9.0.2",
     "lowdb": "^7.0.1",
     "lowdb-node": "^3.0.2",
     "passport": "^0.7.0",
     "passport-jwt": "^4.0.1",
+    "passport-local": "^1.0.0",
     "uuid": "^9.0.1"
   },
   "devDependencies": {
