--- a/packages/server/package.json
+++ b/packages/server/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/server",
-  "version": "0.2.61",
+  "version": "0.3.0",
   "description": "A basic express web server setup.",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
@@ -20,7 +20,9 @@
   },
   "dependencies": {
     "@stanlemon/webdev": "*",
+    "body-parser": "^1.20.2",
     "compression": "^1.7.4",
+    "cookie-parser": "^1.4.6",
     "dotenv": "16.3.1",
     "express": "^4.18.2",
     "express-rate-limit": "^7.1.5",
