--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -7,6 +7,7 @@
   "type": "module",
   "scripts": {
     "start": "node app.js",
+    "start:prod": "NODE_ENV=production node app.js",
     "start:dev": "NODE_ENV=development nodemon --ignore ./db.json app.js",
     "build": "npm run webpack:build",
     "tsc": "tsc",
