--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -24,6 +24,7 @@
     "@stanlemon/server-with-auth": "*",
     "@stanlemon/webdev": "*",
     "react": "^18.2.0",
+    "react-cookie": "^6.1.1",
     "react-dom": "^18.2.0",
     "wouter": "^2.12.1"
   },
