--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -14,7 +14,7 @@
     "webpack:serve": "webpack serve",
     "webpack:build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development concurrently \"npm run webpack:serve\" \"npm run start:dev\"",
-    "test": "jest",
+    "test": "jest --detectOpenHandles",
     "test:watch": "jest -w",
     "test:coverage": "jest --coverage",
     "lint": "eslint --ext js,jsx,ts,tsx ./src/",
