--- a/apps/react-pouchdb-example/package.json
+++ b/apps/react-pouchdb-example/package.json
@@ -15,7 +15,7 @@
     "test": "jest",
     "test:coverage": "jest --coverage",
     "lint": "eslint --ext js,jsx,ts,tsx ./src/",
-    "lint:format": "eslint --fix --ext js,jsx,ts,tsx ./src/"
+    "lint:fix": "eslint --fix --ext js,jsx,ts,tsx ./src/"
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.5.1",
