--- a/renovate.json
+++ b/renovate.json
@@ -4,12 +4,20 @@
     "group:allNonMajor"
   ],
   "timezone": "America/Indiana/Indianapolis",
-  "bumpVersion": "patch",
   "rangeStrategy": "bump",
   "schedule": [
-    "after 2am and before 6am on Thursday",
     "after 10am and before 4pm on Saturday"
   ],
+  "lockFileMaintenance": {
+    "enabled": true,
+    "automerge": true,
+    "automergeType": "branch",
+    "schedule": [
+      "on the first day of the month",
+      "after 10am and before 4pm"
+    ]
+  },
+  "automerge": true,
   "packageRules": [
     {
       "packageNames": [
@@ -40,7 +48,6 @@
       "matchUpdateTypes": [
         "major"
       ],
-      "automerge": true,
       "automergeType": "pr"
     },
     {
@@ -53,8 +60,17 @@
         "pin",
         "digest"
       ],
-      "automerge": true,
-      "automergeType": "branch"
+      "automergeType": "branch",
+      "stabilityDays": 14
+    },
+    {
+      "matchUpdateTypes": [
+        "security"
+      ],
+      "schedule": [
+        "at any time"
+      ],
+      "automergeType": "pr"
     }
   ]
 }
