--- a/renovate.json
+++ b/renovate.json
@@ -4,6 +4,7 @@
     "group:allNonMajor"
   ],
   "timezone": "America/Indiana/Indianapolis",
+  "bumpVersion": "patch",
   "rangeStrategy": "bump",
   "schedule": [
     "after 10am and before 4pm on Saturday"
