Attempt to upgrade eslint

--- a/apps/hello-world/package.json
+++ b/apps/hello-world/package.json
@@ -8,8 +8,8 @@
   "scripts": {
     "start": "webpack serve",
     "build": "webpack",
-    "lint": "eslint --ext js,jsx,ts,tsx ./src/",
-    "lint:fix": "eslint --fix --ext js,jsx,ts,tsx ./src/"
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@stanlemon/webdev": "*",
