--- a/apps/react-pouchdb-example/package.json
+++ b/apps/react-pouchdb-example/package.json
@@ -14,8 +14,8 @@
     "tsc": "tsc",
     "test": "jest",
     "test:coverage": "jest --coverage",
-    "lint": "eslint --ext js,jsx,ts,tsx ./src/",
-    "lint:fix": "eslint --fix --ext js,jsx,ts,tsx ./src/"
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@fortawesome/fontawesome-svg-core": "^6.6.0",
