--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -17,8 +17,8 @@
     "test": "jest --detectOpenHandles",
     "test:watch": "jest -w",
     "test:coverage": "jest --coverage",
-    "lint": "eslint --ext js,jsx,ts,tsx ./src/",
-    "lint:fix": "eslint --fix --ext js,jsx,ts,tsx ./src/"
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix ."
   },
   "dependencies": {
     "@stanlemon/server-with-auth": "*",
