--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -5,7 +5,7 @@
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
   "engines": {
-    "node": ">=18.0"
+    "node": ">=20.0"
   },
   "type": "module",
   "main": "./index.js",
@@ -14,8 +14,8 @@
     "lemon": "./index.js"
   },
   "scripts": {
-    "lint": "eslint --ext js,jsx,ts,tsx ./",
-    "lint:fix": "eslint --fix --ext js,jsx,ts,tsx ./",
+    "lint": "eslint .",
+    "lint:fix": "eslint --fix .",
     "lemon": "./index.js"
   },
   "dependencies": {
