Fix pouchdb Buffer issues... maybe for real

--- a/apps/hello-world/package.json
+++ b/apps/hello-world/package.json
@@ -8,6 +8,7 @@
   "scripts": {
     "start": "webpack serve",
     "build": "webpack",
+    "tsc": "tsc",
     "lint": "eslint .",
     "lint:fix": "eslint --fix ."
   },
