--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -30,6 +30,9 @@ jobs:
       - name: Build
         run: npm run build
 
+      - name: Typescript
+        run: npm run tsc
+
       - name: Lint code
         run: npm run lint
 
