--- a/apps/react-pouchdb-example/tsconfig.json
+++ b/apps/react-pouchdb-example/tsconfig.json
@@ -1,6 +1,3 @@
 {
-  "extends": "@stanlemon/webdev/tsconfig.json",
-  "compilerOptions": {
-    "skipLibCheck": true // This is due to an issue with the buffer library
-  }
+  "extends": "@stanlemon/webdev/tsconfig.json"
 }
