--- a/packages/react-couchdb-authentication/package.json
+++ b/packages/react-couchdb-authentication/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/react-couchdb-authentication",
-  "version": "0.8.149",
+  "version": "0.9.0",
   "description": "React component for authenticating against a CouchDB user db and syncing it locally with PouchDB.",
   "keywords": [
     "react",
@@ -22,6 +22,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "build": "rimraf ./dist/; tsc; NODE_ENV=production babel --config-file ./.babelrc.json --extensions=\".ts,.tsx,.js.,.jsx\" ./src/ --out-dir ./dist/ --ignore  \"src /**/*.test.*\" --source-maps",
+    "tsc": "tsc",
     "example": "WEBDEV_ENTRY=./example/Example.tsx webpack serve"
   },
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
@@ -44,7 +45,6 @@
     "@types/node": "^20.16.5",
     "@types/pouchdb": "^6.4.2",
     "@types/react": "^18.3.8",
-    "@types/set-interval-async": "^1.0.3",
     "isomorphic-fetch": "^3.0.0",
     "pouchdb": "^9.0.0",
     "pouchdb-adapter-memory": "^9.0.0",
@@ -55,5 +55,8 @@
   "dependencies": {
     "async-retry": "^1.3.3",
     "buffer": "^6.0.3"
+  },
+  "overrides": {
+    "@types/pouchdb-core": "999"
   }
 }
