--- a/packages/react-pouchdb/package.json
+++ b/packages/react-pouchdb/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/react-pouchdb",
-  "version": "0.4.95",
+  "version": "0.5.0",
   "description": "React components for interacting with PouchDB.",
   "keywords": [
     "react",
@@ -26,6 +26,7 @@
     "lint": "eslint .",
     "lint:fix": "eslint --fix .",
     "build": "rimraf ./dist/; tsc; NODE_ENV=production babel --config-file ./.babelrc.json --extensions=\".ts,.tsx,.js.,.jsx\" ./src/ --out-dir ./dist/ --ignore  \"src /**/*.test.*\" --source-maps",
+    "tsc": "tsc",
     "example": "WEBDEV_ENTRY=./example/Example.tsx webpack serve"
   },
   "peerDependencies": {
@@ -34,6 +35,7 @@
   },
   "devDependencies": {
     "@stanlemon/webdev": "*",
+    "@types/debug": "^4.1.12",
     "@types/lodash-es": "^4.17.12",
     "@types/node": "^20.16.5",
     "@types/pouchdb": "^6.4.2",
@@ -44,5 +46,8 @@
   },
   "dependencies": {
     "lodash-es": "^4.17.21"
+  },
+  "overrides": {
+    "@types/pouchdb-core": "999"
   }
 }
