--- a/apps/template/package.json
+++ b/apps/template/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/app-template",
-  "version": "0.3.55",
+  "version": "0.3.56",
   "description": "A template for creating apps using the webdev package.",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
@@ -11,7 +11,7 @@
     "start:dev": "NODE_ENV=development nodemon --ignore ./db.json app.js",
     "build": "npm run webpack:build",
     "tsc": "tsc",
-    "webpack:serve": "webpack serve",
+    "webpack:serve": "NODE_ENV=development webpack serve",
     "webpack:build": "NODE_ENV=production webpack",
     "dev": "NODE_ENV=development concurrently \"npm run webpack:serve\" \"npm run start:dev\"",
     "test": "jest --detectOpenHandles",
@@ -35,6 +35,7 @@
     "@types/react": "^18.3.8",
     "@types/react-dom": "^18.3.0",
     "concurrently": "^9.0.1",
+    "nodemon": "^3.1.7",
     "supertest": "^7.0.0"
   }
 }
