--- a/packages/cli/package.json
+++ b/packages/cli/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/cli",
-  "version": "0.1.19",
+  "version": "0.1.20",
   "description": "A command tool to make all of my things easier.",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com>",
   "license": "MIT",
@@ -19,7 +19,7 @@
     "lemon": "./index.js"
   },
   "dependencies": {
-    "@stanlemon/app-template": "*",
+    "@stanlemon/app-template": "latest",
     "get-installed-path": "^4.0.8",
     "yargs": "^17.7.2"
   }
