--- a/packages/react-couchdb-authentication/package.json
+++ b/packages/react-couchdb-authentication/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/react-couchdb-authentication",
-  "version": "0.9.1",
+  "version": "0.9.2",
   "description": "React component for authenticating against a CouchDB user db and syncing it locally with PouchDB.",
   "keywords": [
     "react",
@@ -57,8 +57,6 @@
     "buffer": "^6.0.3"
   },
   "overrides": {
-    "@types/pouchdb-core": {
-      "@stanlemon/types-pouchdb-core": "0.0.1"
-    }
+    "@types/pouchdb-core": "npm:@stanlemon/types-pouchdb-core@^0.0.1"
   }
 }
