--- a/apps/react-pouchdb-example/package.json
+++ b/apps/react-pouchdb-example/package.json
@@ -1,9 +1,10 @@
 {
   "name": "@stanlemon/react-pouchdb-example",
-  "version": "0.2.0",
+  "version": "0.3.0",
   "description": "A react app using pouchdb built in typescript",
   "author": "Stan Lemon <stanlemon@users.noreply.github.com",
   "license": "MIT",
+  "type": "module",
   "repository": {
     "type": "git",
     "url": "git@github.com:stanlemon/example-app.git"
