--- a/packages/react-couchdb-authentication/package.json
+++ b/packages/react-couchdb-authentication/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@stanlemon/react-couchdb-authentication",
-  "version": "0.9.2",
+  "version": "0.10.0",
   "description": "React component for authenticating against a CouchDB user db and syncing it locally with PouchDB.",
   "keywords": [
     "react",
@@ -9,8 +9,11 @@
     "authentication",
     "app"
   ],
-  "type": "commonjs",
-  "main": "./dist/index.js",
+  "type": "module",
+  "exports": [
+    "./src/index.ts",
+    "./src/index.js"
+  ],
   "types": "./dist/index.d.ts",
   "files": [
     "dist/**/*"
