--- a/packages/webdev/tsconfig.json
+++ b/packages/webdev/tsconfig.json
@@ -15,8 +15,8 @@
     "forceConsistentCasingInFileNames": true,
     "noFallthroughCasesInSwitch": true,
     "noImplicitAny": true,
-    "module": "ES6",
-    "moduleResolution": "node",
+    "module": "es2015",
+    "moduleResolution": "bundler",
     "resolveJsonModule": true,
     "isolatedModules": true,
     "jsx": "react-jsx"
