--- a/.github/workflows/publish.yml
+++ b/.github/workflows/publish.yml
@@ -29,11 +29,14 @@ jobs:
       - name: Install dependencies
         run: npm ci
 
-      - name: Build
-        run: npm run build
-
       - name: Lint code
         run: npm run lint
+
+      - name: Typescript
+        run: npm run tsc
+
+      - name: Build
+        run: npm run build
 
       - name: Run tests
         run: npm run test
